tools/flowc/tests/errors/error19.flow
import string;

// Test on detection of name conflict of a nested switch / lambda

fun1() -> int {
	s = Some(5);
	switch (s) {
		Some(x): {
			(\x -> x + 1)(x)
		}
		None(): 1;
	}
}
